<resources>
    <string name="app_name">CalculadoraMVC</string>
    <string name="hint_num1">N1</string>
    <string name="x">X</string>
    <string name="vezes">x</string>
    <string name="mais">+</string>
    <string name="hint_num2">N2</string>
    <string name="divisao">/</string>
    <string name="subtracao">-</string>
    <string name="erro_num">Num invalido</string>
    <string name="erro_divisao">Não é possível dividir por zero.</string>
</resources>
