<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.MainActivity"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp"
        android:weightSum="2">

        <EditText
            android:id="@+id/editNum1"
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="0.5"
            android:hint="@string/hint_num1"
            android:inputType="numberDecimal" />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/vezes"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/btnMultiplicar"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/mais"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/btnSomar"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/divisao"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/btnDividir"
            />

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.25"
            android:text="@string/subtracao"
            android:background="@color/colorPrimary"
            android:textColor="#fff"
            android:textStyle="bold"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:id="@+id/btnSubtrair"
            />

        <EditText
            android:layout_width="10dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:hint="@string/hint_num2"
            android:id="@+id/editNum2"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:inputType="numberDecimal"
            />
    </LinearLayout>


    <ListView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp"
        android:id="@+id/lvResultado"
        ></ListView>
</LinearLayout>